--- a/Frugl/Frugl/Views/Calendar/SignOut/SignOut.storyboard
+++ b/Frugl/Frugl/Views/Calendar/SignOut/SignOut.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -22,7 +23,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-nw-Qat">
                                         <rect key="frame" x="7.6666666666666572" y="0.0" width="90" height="34.333333333333336"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="tinted" title="Sign Out"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Sign Out"/>
                                         <connections>
                                             <action selector="signOutButtonTapped:" destination="aCR-3z-A4U" eventType="touchUpInside" id="ura-yv-7Lm"/>
                                         </connections>
@@ -40,7 +41,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PMa-5y-Dcn"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.87409788369999997" green="0.88966280220000005" blue="0.96091991659999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="xDi-xv-l5Y" firstAttribute="centerX" secondItem="PMa-5y-Dcn" secondAttribute="centerX" id="wQi-aT-0xK"/>
                             <constraint firstItem="xDi-xv-l5Y" firstAttribute="centerY" secondItem="PMa-5y-Dcn" secondAttribute="centerY" id="zBn-ur-JPR"/>
@@ -53,9 +54,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
